--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,9 +23,10 @@ ul {
 .debug ,
 .debug * {
     min-height: 50px;
-    padding: 5px;
+    /* padding: 5px; */
     background-color: #ff000022;
-    border: 2px dashed red;
+    /* border: 2px dashed red; */
+    outline: 1px solid red;
 }
 
 
@@ -33,6 +34,8 @@ ul {
 /* ⚙️ VARIABILI ⚙️ */
 :root {
     --col-spacing: 1rem;
+    --sidebar-width: 3rem;
+    --player-height: 5rem;
 }
 
 
@@ -99,4 +102,103 @@ section {
     display: inline-block;
     background-color: transparent;
     border: 0;
+}
+
+
+
+/* MACROSTRUTTURA */
+body {
+    background-color: #141922;
+    color: #A3A3A3;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    color: #fff;
+}
+.page-wrapper {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+}
+main {
+    flex: 1 1 auto;
+
+    display: flex;
+}
+#main-content {
+    flex: 1 1 auto;
+}
+#sidebar {
+    background-color: #000000;
+    flex: 0 0 auto;
+    width: var(--sidebar-width);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    padding: .75rem;
+}
+#player {
+    background-color: #282828;
+    flex: 0 0 auto;
+    height: var(--player-height);
+}
+
+
+
+
+
+
+
+
+
+
+
+/* #SIDEBAR */
+#logo-big {
+    display: none;
+}
+#logo-small {
+    margin-bottom: 1rem;
+}
+.sidebar-menu ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: .5rem;
+}
+.sidebar-menu ul img {
+    width: 1.5rem;
+}
+.sidebar-menu .label {
+    display: none;
+}
+.sidebar-playlist {
+    display: none;
+}
+.sidebar-footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: .5rem;
+}
+.sidebar-footer .label {
+    display: none;
+}
+.install-app img {
+    width: 1rem;
+}
+.profile-picture {
+    background-color: #808080;
+    width: 1.5rem;
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+    overflow: hidden;
 }
