sistemazione generale della sidebar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,9 +131,12 @@ main {
     flex: 1 1 auto;
 
     display: flex;
+    overflow: hidden;
 }
 #main-content {
     flex: 1 1 auto;
+
+    overflow: auto;
 }
 #sidebar {
     background-color: #000000;
@@ -145,6 +148,8 @@ main {
     justify-content: space-between;
 
     padding: .75rem;
+
+    overflow: auto;
 }
 #player {
     background-color: #282828;
@@ -165,9 +170,15 @@ main {
 /* #SIDEBAR */
 #logo-big {
     display: none;
+    /* Test movimento sticky, eventualmente da fare in metodo Web App */
+    /* position: sticky;
+    padding-bottom: 1rem;
+    top: 0;
+    background-color: #000; */
 }
 #logo-small {
     margin-bottom: 1rem;
+    background-color: #000;
 }
 .sidebar-main nav a,
 .install-app,
@@ -184,6 +195,8 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+.sidebar-menu ul {
     gap: .5rem;
 }
 .sidebar-menu ul img {
@@ -194,6 +207,12 @@ main {
 }
 .sidebar-playlist {
     display: none;
+}
+.sidebar-playlist ul {
+    gap: 1rem;
+}
+.sidebar-playlist li:first-child {
+    padding: 1rem 0 0;
 }
 .add-playlist {
     font-weight: bold;
@@ -210,6 +229,7 @@ main {
     flex-direction: column;
     align-items: center;
     gap: .5rem;
+    margin-top: 3rem;
 }
 .sidebar-footer .label {
     display: none;
