stilizzazione main content per dispositivi mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -416,8 +416,14 @@ main {
     row-gap: .5rem;
     margin: 0;
 }
-/* #main-content .container [class^="col"] {
-} */
+/* Modifico sulla colonna per non dover gestire presenza/asenza sottotitolo */
+#main-content .col-100 {
+    margin: 2rem 0 1rem;
+}
+/* Aggiungo margine a titolo che collassa se sottotitolo non presente e rimane se sottotitolo presente */
+#main-content h2 {
+    margin-bottom: .5rem;
+}
 
 
 
