implementazione delle modifiche strutturali ai vari breakpoint del main-content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -416,13 +416,19 @@ main {
     row-gap: .5rem;
     margin: 0;
 }
-/* Modifico sulla colonna per non dover gestire presenza/asenza sottotitolo */
-#main-content .col-100 {
-    margin: 2rem 0 1rem;
+/* Modifico sul container invece che su h2 per non dover gestire presenza/assenza sottotitolo */
+#main-content .container {
+    margin: 2rem 0;
+}
+#main-content #main-content-menu + .container {
+    margin: 1rem 0 2rem;
 }
 /* Aggiungo margine a titolo che collassa se sottotitolo non presente e rimane se sottotitolo presente */
 #main-content h2 {
     margin-bottom: .5rem;
+}
+#main-content .song-card {
+    text-align: center;
 }
 
 
@@ -465,8 +471,18 @@ main {
         display: inline-block;
     }
 }
+
+
+
 /* MEDIUM */
 @media screen and (min-width: 768px) {
+    /* #UTILITY */
+    .col-md-1-4 {
+        width: calc(100% / 4);
+    }
+
+
+
     /* #SIDEBAR */
 
 
@@ -476,7 +492,23 @@ main {
         display: inline-block;
     }
 }
+
+
+
+
+
+
+
+
 /* LARGE */
 @media screen and (min-width: 992px) {
+    /* #UTILITY */
+    .col-lg-1-6 {
+        width: calc(100% / 6);
+    }
+
+
+
+
     /* #SIDEBAR */
 }
